# grafika_starter

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  SFML.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
src/: main.cpp
